# chip8vm

./: Cargo.toml  README.md
.github/demo/: demo.sh
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: assembler.rs  directives.rs  instructions.rs  main.rs  statement.rs
disassembler/: Cargo.toml
disassembler/src/: main.rs
ide/: Cargo.toml
ide/src/: main.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs
roms/: macro.asm  random.asm  simple_drawing.asm  simple_drawing.ch8  timer.asm
src/: assembler.rs  interpreter.rs  lib.rs  logging.rs  main.rs  vm.rs
src/assembler/: codegen_utils.rs  directives.rs  instructions.rs  statement.rs
