[package]
name = "chip8vm"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
colored = "3.0.0"
rand = "0.9.0"
sdl2 = "0.37.0"

[[bin]]
name = "assembler"
path = "src/bin/assembler.rs"

[[bin]]
name = "disassembler"
path = "src/bin/disassembler.rs"

[[bin]]
name = "interpreter"
path = "src/bin/interpreter.rs"
